# arxivspider

./: pyproject.toml  scrapy.cfg
.github/workflows/: setup.yml
arxivspider/spiders/: items.py  middlewares.py  pipelines.py  settings.py
arxivspider/spiders/parsers/: arxiv_base.py
getpapers/io/: configs.py  read_datas.py  write_datas.py
getpapers/io/path/: _base.py
getpapers/spiders/: items.py  settings.py
getpapers/spiders/parsers/: arxiv_base.py
tests/: test_arxivspider.py
