[tool.poetry]
name = "arxivspider"
version = "0.1.0"
description = ""
authors = ["Shoyo-0kbps <mizzaelsantos1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
Scrapy = "^2.5.1"
flake8-black = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
